--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,18 @@
+pjisp-assignment-template 1.1.0 (October 27 2019)
+=================================================
+
+Feature additions
+-----------------
+
+    * Added an internal Makefile target for updating project dependencies.
+
+    * Added Docker support.
+
+Refactoring
+-----------
+
+    * Made all Makefile variables "lazy".
+
 pjisp-assignment-template 1.0.0 (October 25 2019)
 =================================================
 
